# bdsl

./: .gitignore  LICENSE  README.md  bdsl.py  bdsl_types.py  bounds.py  colors.py  configuration.py  install-lang-vscode.sh  lexer.py  notes.md  pyproject.toml  test.py  test_bounds.py  test_examples.py  test_lexer.py  vardata.py
editor/vscode/bdsl-lang/: LICENSE  README.md  language-configuration.json  pack.sh  package.json
editor/vscode/bdsl-lang/syntaxes/: bdsl.tmLanguage.json
examples/: 01_vars.bdsl  01_vars_division.bdsl  02_control_flow.bdsl  02_control_flow_nested.bdsl  03_exception_example.bdsl  04_function.bdsl  05_function_builtin.bdsl  errors.py  test_2.bdsl
