[project]
name = "bdsl"
description = "A very simple programming language, aiming to provide guarantees on variables bounds."
version = "0.1.0"
readme = "README.md"
license = { file = "LICENSE" }

[project.urls]
"Homepage" = "https://github.com/marco-perin/bdsl"

[tool.black]
skip-string-normalization = true
